# jetank_manipulation

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: ApproachTarget.action  GraspObject.action
config/: grasp_poses.yaml
jetank_manipulation/: base_approach_node.py  grasp_pose_node.py  grasp_server.py  mobile_grasp_coordinator.py
launch/: grasp.launch.py
plans/: grasp-speed-optimization-plan.md
test/: test_base_control.py  test_grasp_pose.py  test_import.py
